@@ -8,6 +8,8 @@ NEW FEATURES
 
     o readBamGappedReads()
 
+    o Add use.names arg to readBamGappedAlignments()
+
     o PileupFiles, PileupParam, applyPileup for visiting several BAM
     files and calculating pile-ups on each.
 
